--- a/views/portfolio.pug
+++ b/views/portfolio.pug
@@ -1,9 +1,10 @@
 html 
     head 
-    title ="portfolio"
+        title  #{title}
     body
         style 
             include ../static/style.css
+        link(rel="icon", href="/static/logo.jpg" type='image/x-icon')
         header 
             nav  
                 ul.navitems 
