--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ html
                     li.a #[a(href="/projects") projects]
                     li.a #[a(href="/qual") Qualification]
                     li.a #[a(href="/about") About]
-                    li.c #[a(href="/contact") Contact Info]
+                    li.c #[a(href="/contact") Contact Me]
         section.abb 
             div.about 
                 p#ab Thanks for your interest, here is a quick story of me and this website. #[br]I do my work  mainlyin   C-Language, C++ and JAVA. C++ and Data Structure & C is my stronger section. Besides these    Iknow Web     Development and database as well.This website is basically one of my Web     Developmentproject. #[br]     Thanks again for reading this, because of people like you, it exists and prospers!!!
