--- a/views/qualification.pug
+++ b/views/qualification.pug
@@ -12,7 +12,7 @@ html
                     li.a #[a(href="/projects") projects]
                     li.a #[a(href="/qual") Qualification]
                     li.a #[a(href="/about") About]
-                    li.c #[a(href="/contact") Contact Info]
+                    li.c #[a(href="/contact") Contact Me]
         section.box 
             section.bio
                 div.skill 
